--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     });
     async function getAccount() {
       const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
-      const account = '0x28a292f4dC182492F7E23CFda4354bff688f6ea8';
+      const account = accounts[0];
       showAccount.innerHTML = account;
     }
   </script>
